# Next-Genegration-Adaptive-Convection-Circulation-Coupling-Framework

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TMIF.sh  config.txt  main.cpp
scripts/: CMakeLists_mpi_CPU.txt  CMakeLists_mpi_GPU.txt  generate_cases.sh  setup.sh  submit_all_cases.sh  vvm.ctl
src/: allocate_csswm_vvms.cpp  allocate_csswm_vvms.hpp  main.cpp  reading_config.cpp  reading_config.hpp
